# PDFHelper

./: .gitignore  NOTICE.md  README.md  install_pytorch_auto.py  pyproject.toml  requirements-core.txt  requirements.txt  setup_torch.bat  setup_torch.ps1  setup_torch.py  setup_torch_launcher.bat  test_embed.py
archive/scripts/: chat.py  pdfhelper_bridge.py
archive/translator_service/: translator_chatgpt.py  translator_claude.py  translator_gemini.py  translator_ollama.py  translator_xai.py
backend/: test_markdown.py  test_mineru.py  test_pdfhelper.py  test_rag_system.py  test_translation.py
backend/api/: __init__.py  api.py  config.py  logger.py  pdf_helper.py  progress_manager.py
backend/instance/mineru_outputs/: .gitkeep
backend/instance/pdfs/: .gitkeep
backend/instance/reconstructed_files/: .gitkeep
backend/instance/translated_files/: .gitkeep
backend/services/: __init__.py
backend/services/llm_service/: __init__.py  base_service.py  gemini_service.py  google_service.py  (+2 more)
backend/tests/: test_markdown.py  test_mineru.py  test_pdfhelper.py  test_rag_system.py  test_remove.py  test_translation.py
docs/: LICENSE_GUIDE.md  TODO.md  TODO_RAG.md
forntend/: .gitignore  README.md  VERSION_DIFF.md  index.html  main.js  package.json  preload.js  renderer.js
forntend/scripts/: chat.py  pdfhelper_bridge.py  pdfhelper_rag.py  processor.py
frontend/: .gitignore  README.md  VERSION_DIFF.md  index.html  loading.html  main.js  package-lock.json  package.json  preload.js  processed-docs-ipc.md  renderer.js
frontend/scripts/: pdfhelper_bridge.py  processor.py
(+28 files in other folders)
