[project]
name = "pdfhelper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "torchaudio>=2.7.1",
    "google-genai>=1.32.0",
    "openai>=1.108.1",
    "chromadb>=1.0.20",
    "python-dotenv>=1.1.1",
    "mineru[core]==2.5.4",
    "flask>=3.1.2",
    "flask-cors>=6.0.1",
]

[tool.uv.sources]
# PyTorch will be installed from PyPI (supports auto-detection)
# Users can manually install CUDA version if needed:
# uv pip install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cu118
